@@ -91,6 +91,16 @@ Wikibase time value datatype.
 
 =back
 
+Another projects:
+
+=over
+
+=item L<Wikibase::Datatype::Struct>
+
+Wikibase structure serialization.
+
+=back
+
 =head1 REPOSITORY
 
 L<https://github.com/michal-josef-spacek/Wikibase-Datatype>
