@@ -1,4 +1,5 @@
 0.04
+ - Add link to Wikidata::Datatype::Struct in doc.
 
 0.03 2020-12-11T16:19:01+01:00
  - Add test for check_property().
